objects/bizible2__bizibleSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Bizible Configuration</description>
    <fields>
        <fullName>bizible2__Custom_Revenue_Field_Name__c</fullName>
        <label>Custom Revenue Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Disable_Validation_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Validation Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bizible2__Opportunity_Default_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Opportunity Default Amount</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>bizible2__Use_Custom_Amount_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Custom Amount Field</label>
        <type>Checkbox</type>
    </fields>
    <label>Bizible Global Settings</label>
</CustomObject>